Update chat.html to hide URL

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -13,6 +13,7 @@
         let lastMessageSessionId = null;
         let scheme2Counter = 0;
         let scheme2Timer = null;
+        window.history.replaceState(null, "","/")
 
         function setCookie(name, value, days) {
             const date = new Date();
