--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,7 @@
     --main-color: #472DA6;
     --secondary-color: #6841F2;
     --text-color: white;
+    --text-background-colour-ping: #ffe100cb;
     --background-color: #3B3939;
 }
 
@@ -331,6 +332,10 @@ body {
 .chat-message {
     color: var(--text-color);
 
+}
+
+.chat-message-ping {
+    background-color: var(--text-background-colour-ping);
 }
 
 .timestamp {
