--- a/templates/chat.html
+++ b/templates/chat.html
@@ -587,7 +587,7 @@
             document.getElementById('full-screen-image').style.display = 'none';
 
             document.getElementById('rejoin_button').onclick = function() {
-                window.location.href = 'https://skibcord.site/freak';
+                window.location.href = window.location.href+"skibchat"
             };
 
             if (getCookie('rejoin') === 'true') {
